[package]
name = "signed-data"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "signed_data"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.26.0"
bytemuck = "1.11.0"

[dev-dependencies]
solana-program-test = "1.14"
solana-sdk = "1.14"
ed25519-dalek = "=1.0.1"
rand = "0.7.0"
